--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -323,7 +323,7 @@ font-size: 21px;text-align: left;line-height: 47px;color: #fff;}
 .grnd_prize span{float: left;position: relative;bottom: 9px;}
 
 
-/***********************Member_Pictures_Gallery**************/
+/***********************gallery**************/
 
 .content_rgt3{ float:left; width:786px; height:auto; margin-top:0px; margin-left:31px; }
 
