--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -60,7 +60,7 @@ h1,h2,h3,h4,h5,h6,ul,img,a,p{margin:0px; padding:0px;text-decoration:none;list-s
 .srch_img img{ float:right; width:15px; height:14px;}
 .nav{ float:left; width:100%; height:auto;background-color:#2e2e2e; height:auto; margin-top:15px;}
 .nav ul{ padding:0px; margin:0px; list-style:none;}
-.nav ul li{ float:left; height:auto;font-size:32px; line-height: 47px; font-family: 'helvetica_blackregular';  text-align:left; padding:0px 3.2%;}
+.nav ul li{ float:left; height:auto;font-size:32px; line-height: 47px; font-family: 'helvetica_blackregular';  text-align:left; padding:0px 3.2%; text-transform:uppercase;}
 .nav ul li:last-child { padding:0px .03% 0px 3.2%;}
 .nav ul li a{ color:#ffffff;}
 .nav ul li:last-child{ margin-right:0px;}
@@ -590,7 +590,66 @@ h3.subtitle{border-bottom: 1px solid #000000; color: #6C6C6C; font-size: 16px; f
 .listing .info .i-title{color: #444444; font-size: 14px; font-weight: bold; margin-bottom: 5px;}
 .listing .info .user-name{}
 
+/* USER PAGE STYLE */
+.title h1{font-size:24px; clear:both;}
+.page-container{}
+.colset{}
+.col2 .left{ width:185px;}
+.col2 .main{float:right; width:795px;}
 
+.nav-box{margin:0 0 15px; background:#F1F1F1; padding:10px 0;}
+.left-nav{list-style:none; margin:0; padding:0;}
+.left-nav li{display:block; margin:0;}
+.left-nav li a{display:block; line-height:30px; padding:0 15px; color:#1C1B1B;}
+.left-nav li a:hover{color:#000;}
+
+.user-profile{}
+.user-profile .profile-picture{float:left; width:185px; margin-right:20px;}
+.user-profile .account-info{width:350px; float:left;}
+.user-profile .account-pop{width:220px; float:right;}
+
+.profile-picture .picture{width:100%; line-height:1;}
+.profile-picture .picture .mainimg{width:100%; border:1px solid #999; margin:0 0 5px;}
+.profile-picture .edit{float:left;}
+.profile-picture .delete{float:right;}
+.profile-picture .edit img{float:left; margin:1px 5px 0 0;}
+.profile-picture .delete img{float:left; margin:2px 5px 0 0;}
+
+h2.sub-title{color: #444444; font-size: 20px; font-weight: bold; line-height:1; padding-bottom:4px;}
+h2.sub-title.bordered{border:1px solid #E2E2E2;}
+.user-profile .tbtn{margin-top:6px;}
+ul.info-list li{margin:0 0 8px; color: #4D4D4D; font-size: 14px;}
+ul.info-list li span{display:block; color:#000; font-weight:bold;}
+
+.pop-box{color: #000000; font-size: 16px; font-weight: bold; margin:0 0 5px;}
+.pop-box .num{float:right; color:#4d4d4d;}
+.back-link{line-height:26px; font-size:14px; float:left; margin:0 0 15px; display:block;}
+
+.portfolio 
+.portfolio-row{
+	height:295px;
+	margin-bottom:20px;
+}
+.portfolio-row  .pbox{
+  border: 1px solid #D2D2D2;
+  float: left;
+  font-family: Arial,Helvetica,sans-serif;
+  font-size: 26px;
+  height: 291px;
+  text-align: center;
+  width: 228px;
+  overflow:hidden;
+  position:relative;
+  margin-right:20px;
+}
+.portfolio-row  .look-info{
+	margin-left:20px;
+	margin-right:0;
+}
+.portfolio-row  .pbox  a{display:block; line-height:290px; height:100%; width:100%; text-align:center;}
+.portfolio-row  .pbox  img{max-height:100%; max-width:100%; vertical-align:middle;}
+.portfolio-row  .pbox .sinfo {background:rgba(0,0,0,0.7); color:#fff; position:absolute; bottom:-170px; left:0; right:0; padding:10px; font-size:14px; font-weight:normal; text-align:left; min-height:40%;  box-shadow:0 0 10px rgba(0,0,0,0.5); -moz-box-shadow:0 0 10px rgba(0,0,0,0.5); -webkit-box-shadow:0 0 10px rgba(0,0,0,0.5); transition: bottom 0.5s ease 0s; -moz-transition: bottom 0.5s ease 0s; -webkit-transition: bottom 0.5s ease 0s;}
+.portfolio-row  .pbox:hover .sinfo{bottom:0;}
 
 
 
