--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -431,9 +431,9 @@ input[type=submit],
 	transition: all 0.2s ease 0s;
 	-webkit-transition: all 0.2s ease 0s;
 	-moz-transition: all 0.2s ease 0s;
-	box-shadow:0 0 1px 1px #000 inset;
-	-moz-box-shadow:0 0 1px 1px #000 inset;
-	-webkit-box-shadow:0 0 1px 1px #000 inset;
+	box-shadow:0 0 1px 1px #ccc inset;
+	-moz-box-shadow:0 0 1px 1px #ccc inset;
+	-webkit-box-shadow:0 0 1px 1px #ccc inset;
 }
 input[type=button]:focus,
 input[type=submit]:focus,
@@ -442,11 +442,20 @@ input[type=submit]:focus,
 	top:1px;
 }
 .button.primary {
+	box-shadow:0 0 1px 1px #000 inset;
+	-moz-box-shadow:0 0 1px 1px #000 inset;
+	-webkit-box-shadow:0 0 1px 1px #000 inset;
 	background-color:#444;
 	color:#fff;
 	text-shadow:1px 1px 0px #000;
 }
 .button.buy-btn {
+	font-size:18px;
+	height:40px;
+	line-height:38px;
+	padding:0 30px;
+}
+.button.med {
 	font-size:18px;
 	height:40px;
 	line-height:38px;
