--- a/app/webroot/css/plugin.css
+++ b/app/webroot/css/plugin.css
@@ -74,7 +74,7 @@
 }
 
 #fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
-	background-image: url('../images/fancybox_sprite.png');
+	background-image: url('../img/fancybox_sprite.png');
 }
 
 #fancybox-loading {
@@ -92,7 +92,7 @@
 #fancybox-loading div {
 	width: 44px;
 	height: 44px;
-	background: url('../images/loading.gif') center center no-repeat;
+	background: url('../img/loading.gif') center center no-repeat;
 }
 
 .fancybox-close {
@@ -112,7 +112,7 @@
 	height: 100%;
 	cursor: pointer;
 	text-decoration: none;
-	background: transparent url('../images/blank.gif'); /* helps IE */
+	background: transparent url('../img/blank.gif'); /* helps IE */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	z-index: 8040;
 }
@@ -173,7 +173,7 @@
 	overflow: hidden;
 	display: none;
 	z-index: 8010;
-	background: url('../images/fancybox_overlay.png');
+	background: url('../img/fancybox_overlay.png');
 }
 
 .fancybox-overlay-fixed {
