--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -41,8 +41,8 @@ h1,h2,h3,h4,h5,h6,ul,img,a,p{margin:0px; padding:0px;text-decoration:none;list-s
 
 /*********************************HeaderSection starts---------------------------------------*/
 .container{ width:1000px; height:auto; margin:auto;}
-.header_sectn{ float:left; width:100%; height:auto; margin-top:30px;}
-.upr_sec{float:left; width:100%; height:auto; }
+.header_sectn{ clear:both; width:100%; height:auto; margin-top:30px;}
+.upr_sec{clear:both; width:100%; height:auto; height:85px;}
 .left_sec{ float:left; width:660px; height:auto;}
 .logo{ float:left; width:245px; height:auto;}
 .logo img{ float:left; width:234px; height:83px;}
@@ -58,7 +58,7 @@ h1,h2,h3,h4,h5,h6,ul,img,a,p{margin:0px; padding:0px;text-decoration:none;list-s
 .srch_div input.txt_box{ float:left; font-size:14px; font-family:Arial, Helvetica, sans-serif; text-align:left; text-indent:6px; color:#a9a9a9; width:260px; height:30px; border:none;border-top-left-radius: 4px;border-bottom-left-radius: 4px; line-height:30px;}
 .srch_img{ float:right; width:15px; height:auto; margin:9px;}
 .srch_img img{ float:right; width:15px; height:14px;}
-.nav{ float:left; width:100%; height:auto;background-color:#2e2e2e; height:auto; margin-top:15px;}
+.nav{ height:47px; clear:both; width:100%; background-color:#2e2e2e; margin-top:15px;}
 .nav ul{ padding:0px; margin:0px; list-style:none;}
 .nav ul li{ float:left; height:auto;font-size:32px; line-height: 47px; font-family: 'helvetica_blackregular';  text-align:left; padding:0px 3.2%; text-transform:uppercase;}
 .nav ul li:last-child { padding:0px .03% 0px 3.2%;}
@@ -66,7 +66,7 @@ h1,h2,h3,h4,h5,h6,ul,img,a,p{margin:0px; padding:0px;text-decoration:none;list-s
 .nav ul li:last-child{ margin-right:0px;}
 
 /*********************************ContentSection starts---------------------------------------*/
-.content{ float:left; width:100%; height:auto; margin-top:17px; min-height:800px;}
+.content{ clear:both; width:100%; height:auto; margin-top:17px; min-height:500px;}
 
 .div_lft{ float:left; width:490px; border:1px solid #c7c7c7; background-image:url(../img/img3.png); height:485px;}
 .div_txt{ float:left; width:304px; margin:26px;}
@@ -558,6 +558,8 @@ label.error{
 form .submit{
 }
 
+ul.listing{margin:15px 25px; list-style:disc;}
+
 .custdrop{margin:0;}
 .custdrop ul{position:absolute; z-index:9999; display:none; right:0; top:100%; left:0;border:1px solid #d0d0d0; background:#fff;}
 .custdrop li{position:relative; white-space:nowrap; display:block;}
@@ -667,7 +669,7 @@ img{max-width:100%;}
 .item-info .price{font-size: 17px; font-weight: bold; margin:25px 0;}
 
 h3.subtitle{border-bottom: 1px solid #000000; color: #6C6C6C; font-size: 16px; font-weight: bold; text-align: left;}
-.item-info .detail{margin: 0 0 25px;}
+.item-info .detail{margin: 0 0 25px; line-height:1.4; color:#444;}
 
 .like-btn{padding-left:30px; height:30px; line-height:30px; background:url(../img/lk_it.png) 0 0% no-repeat; font-size: 20px; font-weight: bold; margin-bottom: 6px; margin-right: 9px; width: auto; display:block;}
 .like-btn.unlike{background:url(../img/unlk_it.jpg) 0 2px no-repeat; line-height:1;}
@@ -685,6 +687,8 @@ h3.subtitle{border-bottom: 1px solid #000000; color: #6C6C6C; font-size: 16px; f
 .listing .info{color: #444444; font-size: 14px; font-weight: bold; line-height:18px;}
 .listing .info .i-title{color: #444444; display:block; font-size: 14px; font-weight: bold; margin-bottom: 5px;}
 .listing .info .user-name{}
+.listing .info .sact{position:absolute; top:207px; padding:5px; left:0; right:0; background:rgba(255,255,255,0.7);}
+.del-icn{background: url(../img/cros.png) 5px 50% no-repeat; padding-left:20px;}
 
 .price-box a{color:#000;}
 .price-box .price{color:#f00;}
