--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -551,7 +551,7 @@ label.error{
 }
 form .submit{
 }
-
+.cform{width:450px; margin:0 auto;}
 ul.listing{margin:15px 25px; list-style:disc;}
 
 .custdrop{margin:0;}
@@ -857,3 +857,12 @@ color: #7B040F;}
 background: #E2F6C5 url(../img/admin/icn_alert_success.png) no-repeat;
 border: 1px solid #79C20D;
 color: #32510F;}
+
+
+
+
+
+
+
+
+
