--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -529,8 +529,17 @@ fieldset{
 	padding:0px;
 }
 
-form legend { color: #444444; font-size: 20px; font-weight: bold; line-height:1; padding-bottom:4px;
-border-bottom:1px solid #E2E2E2; width:100%; margin:0 0 15px;}
+form legend {
+	background: none repeat scroll 0 0 #E5E5E5;
+	display: block;
+	font-size: 13px;
+	font-weight: bold;
+	margin: 0 0 15px;
+	padding: 13px 20px;
+	text-shadow: 1px 1px 1px #FFFFFF;
+	text-transform: uppercase;
+	width: 100%;
+}
 form .input {
 	display:block;
 	margin:0 0 15px;
@@ -541,9 +550,6 @@ form .input  label{
 	font-size:13px;
 	display:block;
 }
-form .checkbox input[type=checkbox]{
-	float:left;
-}
 form .input  label.error,
 label.error{
 	color:#f00;
@@ -551,7 +557,7 @@ label.error{
 }
 form .submit{
 }
-.cform{width:450px; margin:0 auto;}
+
 ul.listing{margin:15px 25px; list-style:disc;}
 
 .custdrop{margin:0;}
@@ -857,12 +863,3 @@ color: #7B040F;}
 background: #E2F6C5 url(../img/admin/icn_alert_success.png) no-repeat;
 border: 1px solid #79C20D;
 color: #32510F;}
-
-
-
-
-
-
-
-
-
