--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -557,6 +557,11 @@ label.error{
 }
 form .submit{
 }
+form .radio fieldset{}
+form .radio fieldset legend{background:none; padding:0; display: block; font-size: 13px; font-weight: bold; margin: 0 0 5px; text-transform:none; color:#000;}
+form .radio input{float:left; margin:0 5px 0 0; }
+form .radio label{float:left; margin-right:25px; font-weight:normal; color:#333;}
+
 
 ul.listing{margin:15px 25px; list-style:disc;}
 
