--- a/app/webroot/css/admin/layout.css
+++ b/app/webroot/css/admin/layout.css
@@ -1167,3 +1167,11 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
     background: #f4f4ee;
     border-color: #e0e5d6;
 }
+
+.user-profile{}
+.user-profile .profile-picture{float:left; width:185px; margin-right:20px;}
+.user-profile .account-info{width:350px; float:left;}
+.user-profile .account-pop{width:220px; float:right;}
+
+ul.info-list li{margin:0 0 8px; color: #4D4D4D; font-size: 14px;}
+ul.info-list li span{display:block; color:#000; font-weight:bold;}
